SPCTR-2847 - Fix: Team - Alignment is not working when we use the team block on RTL site. (#3174)
* Fix: team alignment rtl issue

* Updated readme of teams block issue

* Updated readme as suggested

---------

--- a/src/blocks/team/style.scss
+++ b/src/blocks/team/style.scss
@@ -258,3 +258,42 @@
 		}
 	}
 }
+html[dir="rtl"] .wp-block-uagb-team {
+	&.uagb-team__image-position-above {
+		&.uagb-team__align-center {
+			text-align: center;
+
+			.uagb-team__content {
+				text-align: center;
+			}
+		}
+
+		&.uagb-team__align-left {
+			text-align: right;
+
+			.uagb-team__content {
+				text-align: right;
+			}
+		}
+
+		&.uagb-team__align-right {
+			text-align: left;
+
+			.uagb-team__content {
+				text-align: left;
+			}
+		}
+	}
+	&.uagb-team__image-position-left {
+		.uagb-team__content {
+			text-align: right;
+		}
+	}
+
+	&.uagb-team__image-position-right {
+
+		.uagb-team__content {
+			text-align: left;
+		}
+	}
+}
